--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;1,900&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="assets/css/main.css">
         <title>Blog Barbershop</title>
     </head>
@@ -25,7 +28,7 @@
                 <a class="nav-link" href="#">Trabajos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Blog</a>
+                <a class="nav-link nav__active" aria-current="page" href="#">Blog</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Horas</a>
@@ -40,13 +43,14 @@
       
       <header class="header">
     <div >
-    <h1 class="header__titulo">5 formas de cuidar tu corte de cabello</h1>
+    <h1 class="header__titulo">5 formas de cuidar <br>
+        tu corte de cabello</h1>
 </div>
       </header>
 
 
       <main class="main">
-<div>
+<div class="main__text">
     <p>12 de abril de 2018</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin non nunc velit. Fusce in neque mauris. Praesent sagittis purus ac nulla accumsan, sed pharetra arcu eleifend. Aliquam et interdum lorem. Sed viverra ipsum et nisl sodales, vitae pulvinar lacus pulvinar. Quisque maximus, magna et congue mollis, turpis metus lobortis tellus, sit amet auctor tortor massa sed nisi. Vivamus dignissim vitae diam ut luctus. Praesent quis efficitur tellus, eu facilisis mi. <br> 
   <br>  Pellentesque interdum massa dui, a tristique est euismod sed. Sed scelerisque fringilla lorem. Phasellus consequat ipsum nisl, consectetur accumsan est posuere in. Cras sit amet lorem nec risus fermentum varius ac non nisl. Quisque faucibus eleifend leo, a vestibulum eros tristique vel. Proin tincidunt erat dapibus malesuada malesuada. Vestibulum sed volutpat est. Vivamus laoreet rhoncus eros, vel accumsan est. Aliquam scelerisque vehicula orci, vel vulputate augue vulputate vitae. Pellentesque luctus, turpis nec semper tempor, augue turpis molestie lorem, eu rhoncus metus neque sit amet est.<br> 
@@ -55,31 +59,37 @@
   <br> Pellentesque lobortis sem eget libero fringilla congue. Cras eu tristique est. Sed pretium, nibh ac ultricies tincidunt, nisl elit aliquet augue, at interdum lorem leo in ipsum. Donec in massa ex. Quisque ut maximus risus. Fusce finibus risus ex, ut imperdiet eros gravida quis. Praesent semper dapibus pulvinar. Nullam facilisis consectetur vulputate. Nullam pharetra dui justo, sed vehicula magna malesuada sit amet. Curabitur commodo aliquam mi, ut tempus eros tristique non. Curabitur ipsum neque, blandit et mauris non, egestas dapibus mi. Nunc tincidunt sodales mi, sed semper massa. <br> 
 </div>
 
-<div>
+<div class="main__btn">
 
     <button type="button" class="btn  btn-lg">Compartir</button>
     <button type="button" class="btn  btn-lg">Comentar en twitter</button>
 
 </div>
-<hr>
 
-<div class="article">
+</main>
+
+
+<article class="article">
+  
+<div >
+    <div class="article1">
 <img src="assets/images/naomi-thai.png" alt="">
 <p>Naomi Thai</p>
 <p>@Naothaidepelos.com</p>
 </div>
 
-<div>
+<div class="article2">
     <p>Nullam eget libero vitae libero accumsan posuere vitae et magna. Pellentesque sollicitudin dui in congue pulvinar. Duis pharetra orci vitae nisl dictum, eu sodales ex luctus. Donec sed nulla eu diam tincidunt tempus non in neque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed justo in tellus sodales maximus sed non nulla. Etiam vel dui sed purus commodo hendrerit id ac eros. Donec at felis euismod, interdum diam ac, dignissim velit. Proin pellentesque, eros quis semper posuere, tortor dolor porta justo, eget gravida ligula quam at nisi. Cras laoreet sagittis lacus, et fringilla orci cursus sed. Vivamus pellentesque augue ultricies tortor porta ultricies vel sit amet justo.</p>
 </div>
-      </main>
+     
+    </article>
 
-      <section>
-          <div class="section">
+      <section class="section">
+          <div>
         <nav aria-label="Page navigation example">
-            <ul class="pagination justify-content-center">
+            <ul class="pagination justify-content-center pagenav">
               <li class="page-item disabled">
-                <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Anterior</a>
+                <a class="page-link" href="#" tabindex="-1" aria-disabled="false">Anterior</a>
               </li>
               <li class="page-item"><a class="page-link" href="#">1</a></li>
               <li class="page-item"><a class="page-link" href="#">2</a></li>
