--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;1,900&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="assets/css/main.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+<link rel="stylesheet" href="assets/css/main.css">
         <title>Blog Barbershop</title>
     </head>
 <body>
@@ -71,15 +73,17 @@
 
 <article class="article">
   
-<div >
-    <div class="article1">
-<img src="assets/images/naomi-thai.png" alt="">
-<p>Naomi Thai</p>
-<p>@Naothaidepelos.com</p>
+
+    <div class="article__1">
+<img class="article__1__foto" src="assets/images/naomi-thai.png" alt="">
+<p class="article__1__nombre" >Naomi Thai</p> <br>
+<br>
+<br>
+<p class="article__1__instg">@Naothai <br> depelos.com</p>
 </div>
 
-<div class="article2">
-    <p>Nullam eget libero vitae libero accumsan posuere vitae et magna. Pellentesque sollicitudin dui in congue pulvinar. Duis pharetra orci vitae nisl dictum, eu sodales ex luctus. Donec sed nulla eu diam tincidunt tempus non in neque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed justo in tellus sodales maximus sed non nulla. Etiam vel dui sed purus commodo hendrerit id ac eros. Donec at felis euismod, interdum diam ac, dignissim velit. Proin pellentesque, eros quis semper posuere, tortor dolor porta justo, eget gravida ligula quam at nisi. Cras laoreet sagittis lacus, et fringilla orci cursus sed. Vivamus pellentesque augue ultricies tortor porta ultricies vel sit amet justo.</p>
+<div class="article__2">
+    <p>Nullam eget libero vitae libero accumsan posuere vitae et magna. Pellentesque sollicitudin dui in congue pulvinar. Duis pharetra orci vitae nisl dictum, eu sodales ex luctus. Donec sed nulla eu diam tincidunt tempus non in neque. </p>
 </div>
      
     </article>
